<resources>
    <string name="app_name">Eventos Usach</string>
    <string name="login">Ingresar</string>
    <string name="ingrese_su_correo_usach">Ingrese su correo usach y su contraseña.</string>
    <string name="mail"> Correo </string>
    <string name="contraseña">Contrasena</string>
    <string name="olvido_contraseña">Olvidé mi contraseña</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="carrera">Carrera</string>
    <string name="bienvenidaRegistro">Para formar parte de EventosUsach regístrese en la aplicación.</string>
    <string name="Registrarse">Registrarse</string>
    <string name="logoRegistro">Registro</string>
    <string name="bienvenidaPerfil">Bienvenido!</string>
    <string name="recuperarPass">Recuperar Contraseña</string>
    <string name="loginn">Log in</string>
</resources>
