<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/ingrese_su_correo_usach"
        android:id="@+id/textView"
        android:textIsSelectable="false"
        android:textStyle="normal"
        android:layout_alignWithParentIfMissing="false"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_margin="@dimen/abc_action_bar_icon_vertical_padding_material"
        android:textAlignment="center" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="13"
        android:id="@+id/editTextCorreo"
        android:text="@string/mail"
        android:textAlignment="center"
        android:layout_marginTop="51dp"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="13"
        android:id="@+id/editTextPass"
        android:layout_below="@+id/editTextCorreo"
        android:layout_alignLeft="@+id/editTextCorreo"
        android:layout_alignStart="@+id/editTextCorreo"
        android:password="false"
        android:textAlignment="center"
        android:text="@string/contraseña"
        android:textColor="@color/bright_foreground_disabled_material_light" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:id="@+id/buttonLogin"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:onClick="onButtonClick"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/olvido_contraseña"
        android:id="@+id/textView2"
        android:layout_below="@+id/buttonLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="46dp"
        android:onClick="text_msg"/>

</RelativeLayout>